# project-redroom

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  DELIVERY_CHECKLIST.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  GIT_UPLOAD.md  INSTALL.md  LICENSE  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  deploy.bat  deploy.sh  setup_windows.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: build-test.yml  ci-cd.yml  deploy.yml
client/: package-lock.json  package.json
client/src/: App.jsx  index.css
kubernetes/: deployment.yaml
redroom/: DEPLOYMENT_GUIDE.md  Dockerfile  __init__.py  config.py  docker-compose.yml  requirements.txt  test_integration.py
redroom/dashboard/: __init__.py
redroom/deployment/: __init__.py  k3s_production.yaml  k3s_single_node.yaml
redroom/forensics/: __init__.py
redroom/forensics/cpp/: BUILD_README.md  CMakeLists.txt  __init__.py  bispectral_analyzer.cpp  bispectral_analyzer.hpp  build.bat  build.sh  ctypes_bridge.py  prnu_extractor.cpp  prnu_extractor.hpp
redroom/forensics/python/: __init__.py  oculometric_analyzer.py  rppg_detector.py
redroom/ledger/: __init__.py  merkle_ledger.py
redroom/orchestration/: __init__.py  forensic_orchestrator.py  main.py
redroom/vlm/: __init__.py  sovereign_vlm.py
server/: check_balance.py  check_config.py  create_wallet.py  debug_hash.py  deepfake_detector.py  deploy.py  forensic_analyzer.py  main.py  register_image.py  requirements.txt  verify_chain.py
smart_contracts/: SourceRegistry.sol
